--- a/baequest-server/package.json
+++ b/baequest-server/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.946.0",
     "@sendgrid/mail": "^8.1.6",
+    "@sentry/node": "^10.38.0",
     "axios": "^1.13.2",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
